key.core/src/test/resources/de/uka/ilkd/key/java/coverage/rejected/generics-wildcard/GenWildcard.java
public class GenWildcard {
    static class Box<T> { T v; }
    int size(Box<?> b) { return 0; }
    int f(Box<? extends Object> b) { return 1; }
}
